--- a/EMPLOYEE-SERVICE.properties
+++ b/EMPLOYEE-SERVICE.properties
@@ -17,4 +17,4 @@ server.port=8081
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
 
-spring.boot.message=XXXX
+spring.boot.message=HELLO IT IS EMPLOYEE SERVICE
