--- a/DEPARTMENT-SERVICE.properties
+++ b/DEPARTMENT-SERVICE.properties
@@ -15,4 +15,4 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 server.port=8082
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 #eureka.instance.preferIpAddress=true
-spring.boot.message=myMessage
+spring.boot.message=HERE IT IS THE DEPARTMENT
