--- a/DEPARTMENT-SERVICE.properties
+++ b/DEPARTMENT-SERVICE.properties
@@ -11,7 +11,7 @@ spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibername.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
+management.endpoints.web.exposure.include=*
 server.port=8082
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 #eureka.instance.preferIpAddress=true
