--- a/EMPLOYEE-SERVICE.properties
+++ b/EMPLOYEE-SERVICE.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibername.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 server.port=8081
-
+management.endpoints.web.exposure.include=*
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
 
