--- a/DEPARTMENT-SERVICE.properties
+++ b/DEPARTMENT-SERVICE.properties
@@ -15,4 +15,4 @@ management.endpoints.web.exposure.include=*
 server.port=8082
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 #eureka.instance.preferIpAddress=true
-spring.boot.message=HERE IT IS THE DEPARTMENT
+spring.boot.message=HERE IT IS THE DEPARTMENTxxxx
