--- a/EMPLOYEE-SERVICE.properties
+++ b/EMPLOYEE-SERVICE.properties
@@ -15,4 +15,4 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 server.port=8081
 management.endpoints.web.exposure.include=*
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
-spring.boot.message=HELLO IT IS EMPLOYEE SERVICE
+spring.boot.message=HELLO IT IS EMPLOYEE SERVICExxx
