--- a/ORGANIZATION-SERVICE.properties
+++ b/ORGANIZATION-SERVICE.properties
@@ -1,6 +1,6 @@
 spring.jpa.defer-datasource-initialization=true
 
-spring.datasource.url=jdbc:mysql://localhost:3307/departments
+spring.datasource.url=jdbc:mysql://localhost:3310/organization
 spring.datasource.username=myuser
 spring.datasource.password=root
 
